@@ -484,7 +484,7 @@ int apc_cache_user_insert(apc_cache_t* cache, apc_cache_key_t key, apc_cache_ent
     size_t* mem_size_ptr = NULL;
 
     if (!value) {
-        return 0;
+        return -1;
     }
 
     LOCK(cache);
@@ -535,7 +535,7 @@ int apc_cache_user_insert(apc_cache_t* cache, apc_cache_key_t key, apc_cache_ent
 
     if ((*slot = make_slot(key, value, *slot, t)) == NULL) {
         UNLOCK(cache);
-        return 0;
+        return -1;
     }
     if (APCG(mem_size_ptr) != NULL) {
         value->mem_size = *APCG(mem_size_ptr);
